<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".cafeshaifa">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cafebrussels"
            android:layout_gravity="center"
            android:layout_width="394dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/cafebrussels"
            android:contentDescription="@string/cafe_brussels_picture" />

        <TextView
            android:id="@+id/cafebrusselstext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_address_moriah_ave_13_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#AFB1B3"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cafecafehaifa"
            android:layout_width="389dp"
            android:layout_height="187dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cafecafehaifa"
            android:contentDescription="@string/cafe_cafe_haifa_picture"/>

        <TextView
            android:id="@+id/cafecafehaifatext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_moriah_ave_13_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cafehapina"
            android:layout_width="389dp"
            android:layout_height="187dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cafehapina"
            android:contentDescription="@string/cafe_hapina_picture"/>

        <TextView
            android:id="@+id/cafehapinatext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_masada_st_43_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/raicafe"
            android:layout_gravity="center"
            android:layout_width="394dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/raicafe"
            android:contentDescription="@string/rai_cafe_picture"/>

        <TextView
            android:id="@+id/raicafetext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_hillel_street_2_balfour_st_26_haifa_3307302"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cafedeyoma"
            android:layout_gravity="center"
            android:layout_width="394dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/cafedeyoma"
            android:contentDescription="@string/cafe_deyoma_picture"/>

        <TextView
            android:id="@+id/cafedeyomatext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_hanassi_blvd_119_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/silvacafe"
            android:layout_gravity="center"
            android:layout_width="394dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/silvacafe"
            android:contentDescription="@string/silva_cafe_picture"/>

        <TextView
            android:id="@+id/silvacafetext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:text="@string/location_moriah_ave_120_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/puzzlecafe"
            android:layout_gravity="center"
            android:layout_width="394dp"
            android:layout_height="187dp"
            app:srcCompat="@drawable/puzzlecafe"
            android:contentDescription="@string/puzzle_cafe_picture"/>

        <TextView
            android:id="@+id/puzzlecafetext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/location_masada_st_21_haifa"/>
    </LinearLayout>
</ScrollView>