<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".barshaifa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/izabar"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/izabar"
            android:contentDescription="@string/iza_bar_picture"/>



        <TextView
            android:id="@+id/izabartext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autoSizeTextType="none"
            android:text="@string/location_moshe_aharon_st1"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/templebar"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/templebar"
            android:contentDescription="@string/temple_bar_picture"/>

        <TextView
            android:id="@+id/templebartext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autoSizeTextType="none"
            android:text="@string/location_hahistadrut_ave_55_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/kingdombar"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:contentDescription="@string/kingdom_bar_and_restaraunt_picture"
            app:srcCompat="@drawable/kingdomrestaurantbar" />

        <TextView
            android:id="@+id/kingdombartext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autoSizeTextType="none"
            android:text="@string/location_sderot_ben_gurion_37_haifa"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/momokitchen"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:contentDescription="@string/momo_kitchen_bar_picture"
            app:srcCompat="@drawable/momokitchenbar" />

        <TextView
            android:id="@+id/momokitchentext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/location_ahi_eilat_7_haifa" />

        <ImageView
            android:id="@+id/thebearin"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:contentDescription="@string/the_bear_inn_picture"
            app:srcCompat="@drawable/thebearinn" />

        <TextView
            android:id="@+id/thebearinntext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/location_hanassi_blvd_135_haifa" />

        <ImageView
            android:id="@+id/noalasockspub"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:contentDescription="@string/nola_socks_pub_picture"
            app:srcCompat="@drawable/nolasockspub" />

        <TextView
            android:id="@+id/noalasockspubtext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/location_shalom_aleichem_st_4_haifa" />

        <ImageView
            android:id="@+id/winebarhaifa"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:contentDescription="@string/wine_bar_by_andre_suidan_picture"
            app:srcCompat="@drawable/winebarbyandresuidan" />

        <TextView
            android:id="@+id/winebarhaifatext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:autoSizeTextType="none"
            android:textAlignment="center"
            android:textColor="#100D0D"
            android:textColorHighlight="#100D0D"
            android:textColorHint="#100D0D"
            android:textColorLink="#100D0D"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/location_hanassi_blvd_98_haifa" />

    </LinearLayout>
</ScrollView>






