<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:inputType="text">


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:labelFor="@id/editTextTextEmailAddress"
        android:hint="@string/prompt_email"
           />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="textPassword"
        android:labelFor="@id/editTextTextPassword"
       android:hint="@string/prompt_password"  />


    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="sign up" />




</LinearLayout>




